# bambulab-timelapse-downloader

./: .grype.yaml  README.md  build.sh  dockerfile  pyproject.toml  requirements.txt  timelapse_downloader.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docker-image.yml
