[project]
name = "bambulab-timelapse-downloader"
version = "0.1.0"
description = "Downloads timelapse videos from Bambu Lab 3D printers via FTP"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "moviepy>=2.2.1",
    "croniter>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["timelapse_downloader.py"]
